# self-play-engine

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: concepts.md  examples.md  training.md
examples/: debug_train_debate.py  demo_debate.py  demo_proposer_solver.py  run_debate.py  run_proposer_solver.py  train_dataset_rl.py  train_debate.py  train_elo_arena.py  train_gsm8k.py  train_head_to_head.py  train_negotiation.py  train_proposer_solver.py  train_refine_loop.py  train_spice.py
src/legos/: __init__.py  cli.py  lora.py
src/legos/core/: __init__.py  arena.py  clients.py  credit.py  episode.py  rubric.py  types.py
src/legos/inference/: __init__.py  config.py  server.py  types.py
src/legos/inference/api/: __init__.py  routes.py
src/legos/inference/engine/: __init__.py  async_engine.py  generation.py
src/legos/tasks/: __init__.py  gsm8k.py  head_to_head.py  negotiation.py  proposer_solver.py  refine_loop.py  spice.py
src/legos/training/: __init__.py  batching.py  config.py  loop.py  loss.py  trainer.py
src/self_play/: __init__.py
src/self_play/core/: __init__.py  arena.py  clients.py  credit.py  episode.py  logging.py  rubric.py  types.py
src/self_play/examples/: __init__.py  dataset_rl.py  debate.py  proposer_solver.py
src/self_play/inference/api/: routes.py
src/self_play/inference/engine/: generation.py
src/self_play/tasks/: __init__.py  elo_arena.py  gsm8k.py  negotiation.py  refine_loop.py
src/self_play/training/: __init__.py  batching.py  config.py  loop.py  loss.py  trainer.py  weight_publisher.py
