[project]
name = "self-play-engine"
version = "0.1.0"
description = "A modular self-play LLM RL engine with clean abstractions"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "openai>=2.14.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
training = [
    "mlx>=0.0.10",
    "mlx-lm>=0.0.10",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "wandb>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_play"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
