[project]
name = "legos"
version = "0.1.0"
description = "A modular self-play LLM RL engine with clean abstractions and integrated inference server"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "httpx>=0.25",
    "openai>=2.14.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.14.0",
    # Inference server dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
    "tiktoken>=0.8.0",
    "huggingface-hub>=0.26.0",
    "transformers>=5.0.0rc1",
    # Training dependencies
    "mlx>=0.0.10",
    "mlx-lm>=0.30.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "wandb>=0.15.0",
]

[tool.uv]
prerelease = "allow"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
legos = "legos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
